@@ -124,3 +124,6 @@
 * 20090204: A lot of binding functions allow optional parameters, but
   not keyword ones. Normalize this.
 
+* 20090204: "rep_set_limit()" and "rep_get_limit()" only manages "bytes",
+  not gigabytes.
+
